# openencoder

./: .gitignore  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  LICENSE-COMMERCIAL.md  PUBLIC_CLAIMS.md  README.md  RELEASE_ATTESTATION.md  SECURITY.md  client_field_encoder.py  openencoder_groth16.py  pyproject.toml
.github/workflows/: ci.yml  release-attestation.yml
circuits/: openencoder_field_envelope.circom
docs/: BENCHMARKS.md  BLACKBOX_DISCLOSURE_PACKET.md  MSMARCO_REPRODUCTION.md  OPENENCODER_APE.md  OPENENCODER_PORTABLE_ENDPOINT.md  PATENT_REFERENCE.md  PATENT_REFERENCE_EDITION_MATRIX.md  README_DESIGN_NOTES.md  RELEASE_CHECKLIST.md  THREAT_MODEL.md
docs/proofs/: groth16_verification_proof.json  msmarco_full_parity_gravitas_submission.json  msmarco_full_parity_proof.json  msmarco_replay_proof.json  msmarco_v2_real_parity_rebuild_completion.json  msmarco_v2_real_proof.json  msmarco_v2_real_proof_rebuild_done.json  msmarco_v2_real_public_handoff.json  openencoder_linux_ape_e2e_proof.json  openencoder_origamold_masterfield_ape_package_receipt.json  openencoder_portable_launcher_ape_package_receipt.json  openencoder_real_groth16_circuit_manifest.json  reference_replay_proof.json  (+3 more)
examples/: README.md
scripts/: check_release_gates.py  compare_msmarco_v2_real.py  package_origamold_masterfield_ape.py  package_portable_launcher_ape.py  prove_msmarco_full_parity.py  prove_msmarco_replay.py  prove_msmarco_v2_real_parity.py  prove_public_claims.py  prove_reference_replay.py  release_privacy_scan.py
tests/: test_client_field_encoder_smoke.py
(+11 files in other folders)
